resources/desktop/asserts/css/desktop.css
body {
    background: url("../img/desktop_background.jpg");
    /*-webkit-touch-callout: none;*/
    /*-webkit-user-select: none;*/
    /*user-select: none;*/
    margin:0px;
    position:fixed;
    left: 0px;
    top: 0px;
    width:100%;
    height:100%;
}
.itemContainer {
    overflow:hidden;
}
.applet {
    float:left;
}
.applet .handlebar:hover {
    background: rgba(100, 0, 100, 0.8);
}

#grid {
    position: absolute;
    left:0px;
    top:0px;
    z-index: -1000;
    height: 100%;
    width: 100%;
    background: rgba(0, 1, 1, 0.4);
}

#item_grid {
    position:fixed;
    background-color:rgba(22, 22, 22, 0.3);
    overflow:hidden;
}

.item_selected {
    border-radius:3px;
    background-color:rgba(77, 77, 255, 0.8);
    z-index:1000;
}

.Folder, .DesktopEntry, .NormalFile {
    width: 80px;
    padding: 3px 5px;
    margin: 1px 1px;
    text-align: center;
    font-size: small;
    color: white;
    text-shadow: 0px 3px 3px black;
    outline: none;
}

.Folder img, .DesktopEntry img {
    width: 48px;
    height: 48px;
}

.item_name {
    word-wrap:break-word;
    word-break:break-all;
    overflow: hidden;
}

/* Generic context menu styles */
.contextMenu {
    background: rgba(200, 200, 150, 0.8);
    position: absolute;
    width: 120px;
    z-index: 99999;
    border: solid 1px #CCC;
    padding: 0px;
    margin: 0px;
    display: none;
}

.contextMenu LI {
    list-style: none;
    padding: 0px;
    margin: 0px;
}

.contextMenu A {
    color: #333;
    text-decoration: none;
    display: block;
    line-height: 20px;
    height: 20px;
    background-position: 6px center;
    background-repeat: no-repeat;
    outline: none;
    padding: 1px 5px;
    padding-left: 28px;
}

.contextMenu LI.hover A {
    color: #FFF;
    background-color: #3399FF;
}

.contextMenu LI.disabled A {
    color: #AAA;
    cursor: default;
}

.contextMenu LI.hover.disabled A {
    background-color: transparent;
}

.contextMenu LI.separator {
    border-top: solid 1px #CCC;
}

/*
    Adding Icons

    You can add icons to the context menu by adding
    classes to the respective LI element(s)
*/

.contextMenu LI.edit A { background-image: url(images/page_white_edit.png); }
.contextMenu LI.cut A { background-image: url(images/cut.png); }
.contextMenu LI.copy A { background-image: url(images/page_white_copy.png); }
.contextMenu LI.paste A { background-image: url(images/page_white_paste.png); }
.contextMenu LI.delete A { background-image: url(images/page_white_delete.png); }
.contextMenu LI.quit A { background-image: url(images/door.png); }

#pop_background {
    width:100%;
    height:100%;
    position: fixed;
    z-index: 50;
    background-color:rgba(0,0,0,0);
}

#pop_grid {
    z-index: 51;
    position: fixed;
    /*background: none repeat scroll 0% 0% rgba(8, 41, 67, 0.7);*/
    background-color:#FFF;
    border-radius:6px;
}

#pop_grid ul {
    max-height:376px;
    margin:5px;
    background-color:rgba(0,0,0,0.5);
    list-style: none outside none;
    overflow-y:auto;
}

#pop_grid ul li {
    width:80px;
    height:86px;
    padding: 3px 5px;
    margin: 1px 1px;
    display: inline-block;
    vertical-align:top;
    text-align:center;
}
#pop_grid ul li div {
    max-height:36px;
    word-wrap:break-word;
    word-break:break-all;
    overflow: hidden;
}

